# confluence

./: .gitignore  .gitmodules  README.md  main.tf  pyproject.toml  variables.tf
.github/workflows/: deploy.yml  deploy.yml.hold
deploy/: deploy-containers.sh  deploy.sh
docs/: manual-deployment.md
notebooks/: README.md  data_check.ipynb  data_visualize.ipynb  requirements.txt  run.sh  setup.sh
reaches/: README  reaches_of_interest.sit.json  reaches_of_interest.uat.json  reaches_of_interest.unit.json
scripts/: sync_docker_images.py
terraform/: .gitignore  .terraform.lock.hcl  confluence-alarm.tf  confluence.tf.tmpl  ecr.tf  main.tf  network.tf  variables.tf
terraform/env/: sit.env
terraform/envs/: sit.env
terraform/tfvars/: sit.backend.tfvars  sit.tfvars
workflow-infrastructure/: confluence-batch.tf  confluence-cw.tf  confluence-ec2.tf  confluence-efs.tf  confluence-iam.tf  confluence-s3.tf  confluence-sg.tf  confluence-sns.tf  confluence-vpc.tf  main.tf  variables.tf
workflow-infrastructure/scripts/: ec2-efs-user-data.sh
workflow-step-function/: confluence-iam.tf  confluence-sfn-workflow.asl.json  confluence-sfn.tf  main.tf  variables.tf
